--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap"
       rel="stylesheet">
 
+    <!--Awesome Icons-->
+    <link rel="stylesheet" href="/font-awesome4.7.0/css/font-awesome.min.css">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
@@ -24,6 +27,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -51,23 +55,12 @@
     </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p> Tell them I hate them. Is the Space Pope reptilian!? Tell her she looks thin. Hello, little man. I will
-        destroy
-        you!
-        I've got to find a way to escape the horrible ravages of youth. Suddenly, I'm going to the bathroom like
-        clockwork,
-        every three hours. And those jerks at Social Security stopped sending me checks. Now 'I' have to pay them'!</p>
 
-      <p>Those options are already baked in with this model shoot me an email clear blue water but we need distributors
-        to
-        evangelize the new line to local markets, but fire up your browser. Strategic high-level 30,000 ft view. Drill
-        down
-        re-inventing the wheel at the end of the day but curate imagineer, or to be inspired is to become creative.</p>
       <section class="new-tweet">
-        <h2>Compose Tweet</h2>
+
+        <h1>Compose Tweet</h1>
         <form method="POST" action="/tweets/">
-          <div class="tweets-container"></div>
-          <label for="tweet-text"> tweet tweet</label>
+
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div>
             <div class="tweet-action">
@@ -76,6 +69,30 @@
             </div>
           </div>
         </form>
+      </section>
+      <div id="outsideTweetsContainer">
+        <section class="tweets-container">
+          <article>
+            <header class="tweet-header">
+              <img src=https://i.imgur.com/73hZDYK.png>
+              <div id="nameAndUsername">
+                <h1 class=posterName>Newton</h1>
+                <h1 class=username>@SirIsaac</h1>
+              </div>
+            </header>
+            <div class="tweet-content">
+              If I have seen further it is by standing on the shoulders of giants </div>
+            <footer class="tweet-footer">
+
+              <div class="daysAGo"> 10 days ago </div>
+
+              <div id="icons">
+                <i class="fas fa-camera"></i>
+                <i class="far fa-arrow-alt-circle-up"></i>
+              </div>
+      </div>
+      </footer>
+      </article>
       </section>
     </main>
   </body>
