aded function to show userdata and formatting, fixed shadow boxes

--- a/public/index.html
+++ b/public/index.html
@@ -70,28 +70,8 @@
           </div>
         </form>
       </section>
-      <section class="tweets-container">
-        <article>
-          <header class="tweet-header">
-            <img src=https://i.imgur.com/73hZDYK.png>
-            <div id="nameAndUsername">
-              <h1 class=posterName>Newton</h1>
-              <h1 class=username>@SirIsaac</h1>
-            </div>
-          </header>
-          <div class="tweet-content">
-            If I have seen further it is by standing on the shoulders of giants </div>
-          <footer class="tweet-footer">
+      <section id="tweets-container">
 
-            <div class="daysAGo"> 10 days ago </div>
-
-            <div id="icons">
-              <i class="fas fa-camera"></i>
-              <i class="far fa-arrow-alt-circle-up"></i>
-            </div>
-            </div>
-          </footer>
-        </article>
       </section>
     </main>
   </body>
