added error message for characters being in between 1-140 characters and added the css for it

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
     </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <div id="err-msg" class="error">
+        Twee-ror! You can only enter between 1 to 140 characters! tweeeeeet!
+      </div>
       <section class="new-tweet">
         <h1>Compose Tweet</h1>
 
